[package]
name = "rdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
nom = "7.1.3"

[[bin]]
name = "rdb_server"
path = "src/server.rs"

[[bin]]
name = "rdb_client"
path = "src/client.rs"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
